menu height correction mobile

--- a/src/components/MenuAside/styles.module.scss
+++ b/src/components/MenuAside/styles.module.scss
@@ -231,6 +231,7 @@
 @media(max-width: 768px){
     .menuAside{
         width: 90%;
+        height: 100%;
         .menuAside__content{
             padding: 25px;
             height: 90%;
